wraps up path algorithm, adds stop list table

--- a/main.css
+++ b/main.css
@@ -1,5 +1,24 @@
-.chart-container {
-    width: 60%;
-    height: 300px;
-    margin: 0 auto;
+body {
+    background-color: #f3f6f9;
+    padding: 2rem;
+}
+.main-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+    grid-gap: 1rem;
+}
+.chart-container,
+.table-container {
+    background-color: #fff;
+    border-radius: 3px;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1), 0 -1px 0px rgba(0, 0, 0, 0.02);
+    height: 476px;
+    padding: 20px;
+}
+.choices {
+    margin-top: 1rem;
+}
+.table-wrapper {
+    height: 100%;
+    overflow-y: scroll;
 }
